# EmbeddedCalculus

./: CMakeLists.txt  README.md
include/: PolyTerm.h  Polynomial.h  include.h
include/ASTNode/: ASTNode.h
include/ASTNode/OperandNode/: OperandNode.h
include/ASTNode/OperandNode/ConstantNode/: ConstantNode.h
include/ASTNode/OperandNode/VariableNode/: VariableNode.h
include/ASTNode/OperatorNode/: OperatorNode.h
include/ASTNode/OperatorNode/BinaryOperatorNode/: BinaryOperatorNode.h
include/ASTNode/OperatorNode/BinaryOperatorNode/AdditionNode/: AdditionNode.h
include/Lexer/: Lexer.h  Token.h
include/NodeFactory/: NodeFactory.h
include/Parser/: Parser.h
source/: CMakeLists.txt
source/ASTNode/NodeFactory/: NodeFactory.cpp
source/ASTNode/OperandNode/: OperandNode.cpp
source/ASTNode/OperandNode/ConstantNode/: ConstantNode.cpp
source/ASTNode/OperandNode/VariableNode/: VariableNode.cpp
source/ASTNode/OperatorNode/: OperatorNode.cpp
source/ASTNode/OperatorNode/BinaryOperatorNode/: BinaryOperatorNode.cpp
source/ASTNode/OperatorNode/BinaryOperatorNode/AdditionNode/: AdditionNode.cpp
source/Lexer/: Lexer.cpp  Token.cpp
source/NodeFactory/: NodeFactory.cpp
source/Parser/: Parser.cpp
src/: CMakeLists.txt  PolyTerm.cpp  Polynomial.cpp  Polynomial.h
test/: CMakeLists.txt  Polynomial_tests.cpp
test/Lexer/: Lexer_tests.cpp
test/Polynomial/: ParseCoefficient_tests.cpp  ParseExponent_tests.cpp  SetFromString_tests.cpp  Split_tests.cpp  Trim_tests.cpp
