add_executable(EmbeddedCalculus ASTNode/OperatorNode/OperatorNode.cpp ../include/ASTNode/OperatorNode/OperatorNode.h ASTNode/OperandNode/OperandNode.cpp ../include/ASTNode/OperandNode/OperandNode.h ASTNode/OperandNode/ConstantNode/ConstantNode.cpp ../include/ASTNode/OperandNode/ConstantNode/ConstantNode.h ASTNode/OperandNode/VariableNode/VariableNode.cpp ../include/ASTNode/OperandNode/VariableNode/VariableNode.h NodeFactory/NodeFactory.cpp NodeFactory/NodeFactory.h Lexer/Lexer.cpp ../include/Lexer/Lexer.h Parser/Parser.cpp ../include/Parser/Parser.h ASTNode/OperatorNode/BinaryOperatorNode/BinaryOperatorNode.cpp ../include/ASTNode/OperatorNode/BinaryOperatorNode/BinaryOperatorNode.h ASTNode/OperatorNode/BinaryOperatorNode/AdditionNode/AdditionNode.cpp ../include/ASTNode/OperatorNode/BinaryOperatorNode/AdditionNode/AdditionNode.h Lexer/Token.cpp ../include/Lexer/Token.h)